# spotify-widget

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1672898953481.mjs
src/: App.tsx  main.css  main.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/average-color/: Cargo.toml
src-tauri/average-color/.github/workflows/: rust.yml
src-tauri/src/: main.rs
src-tauri/src/media/: lib.rs  manager.rs  mod.rs  session.rs
src-tauri/src/router/: media.rs  mod.rs  network.rs  router.rs  spotify.rs
src-tauri/src/utils/: color.rs  mod.rs  spotify.rs  thumbnail.rs  window.rs
src/components/: Thumbnail.tsx  Timeline.tsx  UriLink.tsx  VolumeSlider.tsx
src/components/base/: Button.tsx  Slider.tsx
src/hooks/: useIsOnline.ts  useMouseWheel.ts
src/utils/: bindings.ts  clsx.ts  color.ts  math.ts  rspc.ts  spotify.ts  time.ts  types.ts  utils.ts
