[package]
name = "media-widget"
version = "0.0.1"
description = "A tiny widget for controlling your currently playing media."
authors = ["Jesse B."]
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "system-tray"] }
window-vibrancy = "0.3.2"
tokio = { version = "1.23.0", features = ["full"] }
rspc = { version = "0.1.2", features = ["tauri"] }
futures = "0.3.25"
image = "0.24.5"
base64 = "0.20.0"
dominant_color = "0.3.0"
tailwind-palette = { path = '../../tailwind-palette' }
prominence = "0.1.0"
async-stream = "0.3.3"

[dependencies.windows]
	version = "0.43.0"
	features = [
    "Win32_UI_Controls",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_Graphics",
    "Win32_Graphics_Dwm",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Foundation",
    "Foundation_Collections",
    "Media",
    "Media_Control",
    "Security_Cryptography",
    "Storage_Streams",
	]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
