[package]
name = "media-widget"
version = "0.0.1"
description = "A tiny widget for controlling your currently playing media."
authors = ["Jesse B."]
edition = "2021"
rust-version = "1.57"

[workspace]
members = [
	"average-color"
]

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "system-tray"] }
tokio = { version = "1.23.0", features = ["full"] }
rspc = { version = "0.1.2", features = ["tauri"] }
serde_json = "1.0"
window-vibrancy = "0.3.2"
futures = "0.3.25"
base64 = "0.20.0"
prominence = "0.1.0"
async-stream = "0.3.3"
anyhow = "1.0.69"
tailwind-palette = { path = '../../tailwind-palette' }
windows-volume-mixer = { path = '../../windows-volume-mixer' }
average_color = { path = "./average-color" }
contrast = "0.1.0"

[dependencies.windows]
	version = "0.44.0"
	features = [
    "Foundation",
    "Media_Control",
    "Security_Cryptography",
    "Storage_Streams",
    "Win32_Media_Audio",
		"Win32_System_Com",
		"Win32_Foundation",
		"Win32_System_Com_StructuredStorage",
		"Foundation_Collections",
		"Win32_UI_Shell",
		"Win32_UI_WindowsAndMessaging"
	]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
